--- a/Frontend/pages/register.html
+++ b/Frontend/pages/register.html
@@ -66,3 +66,11 @@
         </div>
     </div>
 </section>
+
+<script src="utils/constants.js"></script>
+<script src="utils/rest-client.js"></script>
+<script src="utils/utils.js"></script>
+<script src="services/user-service.js"></script>
+<script>
+    UserService.init();
+ </script>
