--- a/Frontend/pages/account.html
+++ b/Frontend/pages/account.html
@@ -1,5 +1,3 @@
-
-
 <!-- Login Page Content -->
 <section class="py-5">
     <div class="container px-5">
@@ -45,5 +43,13 @@
         </div>
     </div>
 </section>
+
+<script src="utils/constants.js"></script>
+<script src="utils/rest-client.js"></script>
+<script src="utils/utils.js"></script>
+<script src="services/user-service.js"></script>
+<script>
+    UserService.init();
+ </script>
 
 
