--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -81,6 +81,14 @@
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
          <!-- Toastr JS -->
          <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+         
+         <script src="utils/constants.js"></script>
+         <script src="utils/rest-client.js"></script>
+         <script src="utils/utils.js"></script>
+         <script src="services/user-service.js"></script>
+         <script src="services/equipment-service.js"></script>
+         <script src="services/reservation-service.js"></script>
+
         
     </body>
 </html>
