--- a/Frontend/pages/account.html
+++ b/Frontend/pages/account.html
@@ -44,10 +44,10 @@
     </div>
 </section>
 
-<script src="utils/constants.js"></script>
+<!-- <script src="utils/constants.js"></script>
 <script src="utils/rest-client.js"></script>
 <script src="utils/utils.js"></script>
-<script src="services/user-service.js"></script>
+<script src="services/user-service.js"></script> -->
 <script>
     UserService.init();
  </script>
