--- a/Frontend/pages/customer-dashboard.html
+++ b/Frontend/pages/customer-dashboard.html
@@ -40,20 +40,32 @@
                         <div id="profileCollapse" class="collapse mt-3">
                             <form>
                                 <div class="mb-3">
-                                    <label for="name" class="form-label">Full Name</label>
-                                    <input type="text" class="form-control" id="name" value="John Doe">
+                                  <label for="dash_first_name" class="form-label">First Name</label>
+                                  <input type="text" class="form-control" id="dash_first_name" name="first_name" value="">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="email" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="email" value="johndoe@email.com">
+                                  <label for="dash_last_name" class="form-label">Last Name</label>
+                                  <input type="text" class="form-control" id="dash_last_name" name="last_name" value="">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="phone" class="form-label">Phone</label>
-                                    <input type="text" class="form-control" id="phone" value="+123456789">
+                                  <label for="dash_email" class="form-label">Email</label>
+                                  <input type="email" class="form-control" id="dash_email" name="email" value="">
                                 </div>
-                                <button type="button" class="btn btn-success" onclick="saveProfile()">Save Changes</button>
-                                <button class="btn btn-danger " data-bs-toggle="modal" data-bs-target="#deactivateProfileModal">Deactivate</button>
-                            </form>
+                                <div class="mb-3">
+                                  <label for="dash_birth_date" class="form-label">Birth Date</label>
+                                  <input type="date" class="form-control" id="dash_birth_date" name="birth_date" value="">
+                                </div>
+                                <div class="mb-3">
+                                  <label for="dash_address" class="form-label">Address</label>
+                                  <input type="text" class="form-control" id="dash_address" name="address" value="">
+                                </div>
+                                <div class="mb-3">
+                                  <label for="dash_phone" class="form-label">Phone</label>
+                                  <input type="text" class="form-control" id="dash_phone" name="phone" value="">
+                                </div>
+                                <button type="button" class="btn btn-success" id="saveProfileBtn">Save Changes</button>
+                                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deactivateProfileModal">Deactivate</button>
+                              </form>                              
                         </div>
                     </div>
                 </div>
@@ -228,4 +240,7 @@
     </div>
 </div>
 
+<script>
+    UserService.init();
+ </script>
 
